invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_3.src
.IPPcode24
ADD int@49